--- a/src/components/Products/Product/Product.css
+++ b/src/components/Products/Product/Product.css
@@ -1,11 +1,13 @@
 .product {
-  color: white;
-  background-color: var(--light);
-  border: 1px solid var(--dark);
+  transition: 1s ease;
+}
+
+.product:hover {
+  transform: translateY(-5px);
+  cursor: pointer;
 }
 
 .product img {
-  width: 100%;
   height: 150px;
-  border-radius: 5px;
+  overflow: hidden;
 }
