--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -1,11 +1,20 @@
-main {
+.products {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-size: 1.15rem
+}
+
+.products h1 {
+  width: 95%;
+  text-align: center;
+  margin: 1rem;
+  padding: 1rem;
+  font-size: 2rem;
+  color: var(--dark);
 }
 
 .product-grid {
   width: 95%;
-  border: 1px solid red;
 }
